--- a/src/index.css
+++ b/src/index.css
@@ -128,7 +128,8 @@ section {
   overflow: hidden;
 }
 .btn {
-  font-size: 11px;
+  font-size: 14px;
+  font-weight: 600;
   padding: 12px 25px;
   box-sizing: border-box;
   border-radius: 30px;
@@ -141,11 +142,136 @@ section {
 /* ****************************************************************** */
 /* ****************************************************************** */
 
+/* Loading CSS */
+.loading {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background: #f8f8f8;
+  z-index: 9999;
+  display: none;
+}
+
+.loading .logo {
+  width: 200px;
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  overflow: hidden;
+}
+.loading .logo .span {
+  padding: 0 1px;
+  display: block;
+}
+.loading .logo .span img {
+  width: 100%;
+}
+.loading.scene1 {
+  display: block;
+}
+.loading.scene1 .logo span {
+  animation: up;
+  animation-duration: 1s;
+}
+@keyframes up {
+  0% {
+    transform: translateY(30px);
+  }
+  30% {
+    transform: translateY(30px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+.loading.scene2 .logo span {
+  opacity: 0;
+  transition: 0.1s;
+}
+
+/* ****************************************************************** */
+/* ****************************************************************** */
+
+/* Page Load Animation rotate.on */
+.rotate.on {
+  animation-name: rotate;
+  animation-duration: 1.2s;
+}
+@keyframes rotate {
+  0% {
+    transform-origin: 0 0; /* 기준점 */
+    transform: translate(0px, 100%) rotate(20deg);
+    transition: 1s;
+  }
+  100% {
+    transform-origin: 0 0; /* 기준점 */
+    transform: translate(0px, 0px) rotate(0deg);
+    transition: 1s;
+  }
+}
+.rotateText.on {
+  animation-name: rotateText;
+  animation-duration: 1.2s;
+}
+@keyframes rotateText {
+  0% {
+    transform-origin: 0 0; /* 기준점 */
+    transform: translate(0px, 100%) rotate(20deg);
+    transition: 1s;
+  }
+  100% {
+    transform-origin: 0 0; /* 기준점 */
+    transform: translate(0px, 0px) rotate(0deg);
+    transition: 1s;
+  }
+}
+
+.opacity.on {
+  animation-name: fadeIn;
+  animation-duration: 2s;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.opacityText.on {
+  animation-name: fadeInText;
+  animation-duration: 2s;
+}
+@keyframes fadeInText {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+/* ****************************************************************** */
+/* ****************************************************************** */
+
 /* Header CSS */
 header {
   position: fixed;
   width: 100%;
-  z-index: 9999;
+  z-index: 999;
 }
 header .inner {
   padding: 30px 50px 0;
@@ -270,9 +396,9 @@ footer .inner .box .mainTextBox {
   text-align: center;
 }
 footer .inner .box .mainTextBox h2 {
-  font-size: 80px;
+  font-size: 70px;
   text-transform: uppercase;
-  letter-spacing: -10px;
+  letter-spacing: -8px;
   font-weight: normal;
   margin-bottom: 30px;
   color: #141212;
@@ -370,10 +496,10 @@ footer .logoWrap span img {
 
 .visual .inner {
   display: grid;
-  height: 100vh;
-  padding: 25px 50px 25px;
+  height: 110vh;
+  padding: 80px 50px 25px;
   box-sizing: border-box;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: 1fr auto auto;
 }
 
 /* mainText */
@@ -381,17 +507,62 @@ footer .logoWrap span img {
   max-width: fit-content;
   font-weight: normal;
   font-size: 80px;
-  margin-left: auto;
   line-height: 0.9;
   letter-spacing: -2px;
+  margin: 0 auto;
+  align-content: center;
 }
 .visual .inner .mainText span {
   display: block;
   overflow: hidden;
 }
-.visual .inner .mainText span i {
+.visual .inner .mainText .Box {
+  display: grid;
+  grid-template-columns: auto 75%;
+}
+
+.visual .inner .mainText .Box span.left1 {
+  align-self: flex-end;
+}
+.visual .inner .mainText .Box span.left2 {
+  align-self: flex-end;
+}
+
+.visual .inner .mainText .Box .img {
+  grid-row: 1/3;
   display: block;
-  margin-top: 50px;
+  align-items: center;
+}
+
+.visual .inner .mainText .Box img {
+  width: 100%;
+}
+
+.svgAni {
+  animation: svgAni 0.9s 3s infinite both;
+}
+@keyframes svgAni {
+  0% {
+    transform: scale3d(1, 1, 1);
+  }
+  30% {
+    transform: scale3d(1.25, 0.75, 1);
+  }
+  40% {
+    transform: scale3d(0.75, 1.25, 1);
+  }
+  50% {
+    transform: scale3d(1.15, 0.85, 1);
+  }
+  65% {
+    transform: scale3d(0.95, 1.05, 1);
+  }
+  75% {
+    transform: scale3d(1.05, 0.95, 1);
+  }
+  100% {
+    transform: scale3d(1, 1, 1);
+  }
 }
 
 /* subText */
@@ -400,11 +571,10 @@ footer .logoWrap span img {
   font-size: 20px;
   align-self: flex-end;
   margin-bottom: 50px;
+  color: #585858;
 }
 
-.visual .inner .subText span {
-  color: 585858;
-}
+
 
 /* logoWrap */
 .visual .logoWrap {
@@ -427,7 +597,7 @@ footer .logoWrap span img {
 
 /*con1 box*/
 .con1 .box {
-  padding: 60px;
+  padding: 100px 60px 100px;
   background-color: rgba(255, 255, 255, 0.219);
   backdrop-filter: blur(100px);
   display: grid;
@@ -437,15 +607,23 @@ footer .logoWrap span img {
 .con1 .box .mainText {
   font-size: 30px;
   grid-row-start: 2;
+  color: #141212;
 }
 .con1 .box .subText {
-  max-width: 500px;
+  max-width: 600px;
   font-size: 20px;
   grid-column-start: 2;
+  color: #141212;
+  letter-spacing: -1.1px;
+  padding-left: 5rem;
 }
 
 .con1 .box .subText p {
-  margin-top: 14px;
+  margin-top: 10px;
+}
+.con1 .box .subText p span {
+  color: #0358d5;
+  font-weight: 600;
 }
 
 /*con1 text animation*/
@@ -521,6 +699,7 @@ footer .logoWrap span img {
   position: absolute;
   right: 0;
   top: 0;
+  color: #141212;
 }
 .con2 .mainTextBox .in {
   display: flex;
@@ -720,6 +899,9 @@ footer .logoWrap span img {
   max-width: 550px;
   margin-right: 20px;
 }
+.con4 .mainTextBox .in img {
+  border-radius: 10px;
+}
 
 /* con4 listBox */
 .con4 .listBox {
@@ -727,7 +909,7 @@ footer .logoWrap span img {
   perspective: 900px;
 }
 .con4 .listBox .box {
-  background: #f8f8f8c2;
+  background: #f8f8f8ea;
   padding: 50px 130px 60px;
   margin-bottom: 35px;
   color: #141212;
