--- a/src/index.css
+++ b/src/index.css
@@ -95,12 +95,21 @@ button {
 }
 img {
   vertical-align: middle;
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  user-select: none;
 }
 
 body {
   font-family: 'Pretendard', 'Releway', sans-serif;
   font-size: 16px;
   letter-spacing: -0.01em;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-use-select: none;
+  user-select: none;
 }
 .wrap {
   position: relative;
@@ -573,8 +582,6 @@ footer .logoWrap span img {
   margin-bottom: 50px;
   color: #585858;
 }
-
-
 
 /* logoWrap */
 .visual .logoWrap {
